fix: alignment tweak

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,8 @@ body,
     position: absolute;
     text-align: start;
     left: 600px;
-    top: 80px;
+    top: 90px;
+    max-width: 480px;
   }
 }
 
